2005-01-13: Johannes Schindelin <Johannes.Schindelin@gmx.de>
	* started the project
